deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inox-backend-svc
spec:
  selector:
    app: inox-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inox-frontend-svc
spec:
  selector:
    app: inox-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
